Merged revisions 9930-10061 via svnmerge from https://svn.codehaus.org/mule/trunk/mule
................
  r9936 | aperepel | 2007-11-28 20:05:33 +0100 (Mi, 28 Nov 2007) | 1 line
  
  MULE-2728 Add remote client address to message properties
................
  r9937 | aperepel | 2007-11-28 20:10:16 +0100 (Mi, 28 Nov 2007) | 1 line
  
  MULE-2728 Add remote client address to message properties
................
  r9949 | aperepel | 2007-11-29 22:56:42 +0100 (Do, 29 Nov 2007) | 1 line
  
  Fix a warning about Null property value for UDP
................
  r9961 | marie.rizzo | 2007-12-03 08:51:40 +0100 (Mo, 03 Dez 2007) | 1 line
  
  Modified the Websphere connector to only override the XA transaction receiver with the WebsphereTransactedMessageReceiver. Also, the classnames are now extracted into constants. 
................
  r9962 | dirk.olmes | 2007-12-03 09:25:32 +0100 (Mo, 03 Dez 2007) | 2 lines
  
  remove the unneeded windows profile
................
  r9964 | aperepel | 2007-12-03 15:48:45 +0100 (Mo, 03 Dez 2007) | 1 line
  
  Refactoring and review
................
  r9969 | aguenther | 2007-12-04 00:13:14 +0100 (Di, 04 Dez 2007) | 1 line
  
  MULE-2635, MULE-2707, MULE-2670 - Re-introduce mule startup using custom main function
................
  r9970 | holger | 2007-12-04 11:13:54 +0100 (Di, 04 Dez 2007) | 9 lines
  
  Merged revisions 9968 via svnmerge from 
  https://svn.codehaus.org/mule/branches/mule-2.x
  
  ........
    r9968 | tcarlson | 2007-12-03 22:40:42 +0100 (Mo, 03 Dez 2007) | 1 line
    
    Fix MULE-2765, MULE-2764
  ........
................
  r9971 | holger | 2007-12-04 14:34:00 +0100 (Di, 04 Dez 2007) | 2 lines
  
  MULE-2700 (Mule must not add xml-apis/xerces to the classpath): add endorsed dirs to service wrapper parameters when running with JDK 1.4
................
  r9975 | dirk.olmes | 2007-12-04 15:08:36 +0100 (Di, 04 Dez 2007) | 2 lines
  
  MULE-2759 (BuildDate uses SVN revision number instead of an actual build date): remove the b